Add custom information

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Yummy Garden</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -78,45 +78,49 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <h2 class="text-center">Opening Hours</h2>
-                        <table class="table table-responsive">
+                        <table class="table table-responsive text-center">
                             <tbody>
                                 <tr>
                                   <th scope="row">Monday</th>
-                                  <td>CLOSED</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Tuesday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>CLOSED</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Wednesday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Thursday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Friday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Saturday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Sunday</th>
-                                  <td>11:00am to 3:00pm, 4:30pm to 9:00pm</td>
+                                  <td>11:00am to 9:00pm</td>
                                 </tr>
                               </tbody>
                         </table>
-
-                        <h2 class="text-center mt-5" id="contact">Contact Us</h2>
-                        <p class="text-center">Phone: <a href="#">425-123-4567</a></p>
-                        <p class="text-center">Email: <a href="#">filleremail123@gmail.com</a></p>
+                        
+                        <div class="mb-5">
+                            <h2 class="text-center mt-5 mb-4" id="contact">Contact Us</h2>
+                            <p class="text-center">Phone: <a href="tel: +14252553612">(425) 255-3612</a></p>
+                            <p class="text-center">Email: <a href="mailto: yummygarden2023@gmail.com">yummygarden2023@gmail.com</a></p>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <h2 class="text-center">Find Us Here</h2>
+                        <p class="text-center"><strong>Address:</strong> 1306 Union Ave NE #12, Renton, WA 98059</p>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.245021015828!2d-122.16708162327113!3d47.504619295013896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906863629bf781%3A0xb18a6033f9e24de!2s1306%20Union%20Ave%20NE%20%2312%2C%20Renton%2C%20WA%2098059!5e0!3m2!1sen!2sus!4v1694791776919!5m2!1sen!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
