Updated Site assets

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <!-- Masthead-->
         <header class="masthead">
             <div class="container align-items-center">
-                <h1>The Best Fried Chicken in WA</h1>
-                <h1>WE'RE HIRING!</h1>
-                <p>Apply coupon before you checkout to get FREE Fruit Tea over $40 take out only!</p>
+                <h1>The Best Roast Goose in WA!</h1>
+                <h2>We are opened 7 days a week!</h2>
+                <p>For Dine-In, Roast Goose for $98 Whole and $55 Half!</p>
 
                 <div class="mt-4 row">
                     <div class="col-xs-0 col-md-2"></div>
                     <div class="col-xs-12 col-sm-6 col-md-4 d-grid gap-2 my-1">
-                        <a class="btn btn-primary btn-lg float-right" href="#">Order Now</a>
+                        <a class="btn btn-danger btn-lg float-right" href="#">Coming Soon..</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 d-grid gap-2 my-1">
                         <a class="btn btn-secondary btn-lg float-left" href="assets/menu.pdf" target="_blank">Download Menu</a>
@@ -56,16 +56,10 @@
                 
                 <div class="mt-4">
                     <p>Delivery options available! Click on our delivery partner icons below.</p>
-                    <a href="#">
-                        <img src="assets/img/takeout/fantuan.png" class="rounded mx-3 my-2 takeout-icon">
-                    </a>
-                    <a href="#">
-                        <img src="assets/img/takeout/panda.png" class="rounded mx-3 my-2 takeout-icon">
-                    </a>
-                    <a href="#">
+                    <a href="https://www.ubereats.com/store/yummy-garden-restaurant/YVKtK_YxViy8WAg1S-kcsQ" target="_blank" rel="noopener noreferrer">
                         <img src="assets/img/takeout/ubereats.png" class="rounded mx-3 my-2 takeout-icon">
                     </a>
-                    <a href="#">
+                    <a href="https://www.doordash.com/store/yummy-garden-restaurant-renton-25839701/" target="_blank" rel="noopener noreferrer">
                         <img src="assets/img/takeout/doordash.png" class="rounded mx-3 my-2 takeout-icon">
                     </a>
                 </div>
@@ -86,7 +80,7 @@
                                 </tr>
                                 <tr>
                                   <th scope="row">Tuesday</th>
-                                  <td>CLOSED</td>
+                                  <td>11:30am to 9:00pm</td>
                                 </tr>
                                 <tr>
                                   <th scope="row">Wednesday</th>
