--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <a class="btn btn-danger btn-lg float-right" href="#">Coming Soon..</a>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-4 d-grid gap-2 my-1">
-                        <a class="btn btn-secondary btn-lg float-left" href="assets/menu.pdf" target="_blank">Download Menu</a>
+                        <a class="btn btn-secondary btn-lg float-left" href="assets/menu1.pdf" target="_blank">Download Menu</a>
                     </div>
                     <div class="col-xs-0 col-md-2"></div>
                 </div>
